--- a/trunk/devtools/RDBReader/RDBReader/RDBReader.vcxproj
+++ b/trunk/devtools/RDBReader/RDBReader/RDBReader.vcxproj
@@ -61,6 +61,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
+    <ClInclude Include="config.h" />
     <ClInclude Include="structs.h" />
   </ItemGroup>
   <ItemGroup>
