--- a/branches/Mell1eJ/scripts/FaolanConfig.cfg
+++ b/branches/Mell1eJ/scripts/FaolanConfig.cfg
@@ -10,6 +10,14 @@ DBPort = 3306
 DBName = faolan 
 # Number of active connection to the DB server;
 DBConnectionCount = 5 
+#DB Type: 0 = mysql, 1 = ?, 2 = ?, etc
+DBType = 0
+
+######################################################
+
+# Count of network demuxer thread
+demuxerCount = 2
+characterSlots = 4
 
 ######################################################
 
@@ -22,28 +30,3 @@ universeAgentPort = 7000
 playerAgentAddress = 127.0.0.1 
 # Port to listen to
 playerAgentPort = 7001 
-
-# Address to listen to
-csPlayerAgentAddress = 127.0.0.1 
-# Port to listen to
-csPlayerAgentPort = 7002 
-
-# Address to listen to
-agentServerAddress = 127.0.0.1 
-# Port to listen to
-agentServerPort = 7003
-
-# Address to listen to
-worldServerAddress = 127.0.0.1 
-# Port to listen to
-worldServerPort = 7004 
-
-######################################################
-		
-# Count of network demuxer thread
-demuxerCount = 2
-
-######################################################
-
-realmName = Project Faolan Realm
-characterSlots = 4
